--- a/Test-cours-bootstrap-Mérouze-Aurélien/style.css
+++ b/Test-cours-bootstrap-Mérouze-Aurélien/style.css
@@ -100,8 +100,8 @@ h1 {
 
 
 
-@keyframes tipsy {
-    0 {
+/* @keyframes tipsy {
+    0% {
       transform: translateX(-50%) translateY(0%) rotate(0deg);
     }
     100% {
@@ -130,7 +130,7 @@ h1 {
   h3:after {
     border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #BEB09A #BEB09A;
     box-shadow: 25px 25px 25px rgba(46, 46, 49, .8);
-  }
+  } */
 
 
 
