try storage file

--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/Css/style.css
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/Css/style.css
@@ -42,7 +42,7 @@ header {
 }
 
 h1 {
-    background-image: url("Img-Zénit'House-compréssée/étagère-zénithouse.jpg");
+    background-image: url("img.css/étagère-zénithouse.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     padding: 45px 0px 350px 0px;
