--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/Css/style.css
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/Css/style.css
@@ -75,30 +75,24 @@ h1 {
 
 /* *******************Calendrier******************** */
 
-.calendar-container {
-  height: 50vh;
-  background-color: #f0f0f0;
-  border: 1px solid #ddd;
-  padding: 20px;
-}
 .rightBtn {
   position: relative;
-  top: -20px;
+ 
 }
 .leftBtn {
   position: relative;
-  top: -20px;
+  
 }
 
 #cld {
-  width: 60%;
-  height: 80%;
+
+  height: 70vh;
   background-color: rgb(124, 124, 124);
   box-shadow: 0 0 10 rgba(0, 0, 0, 0.3);
 }
 #enteteCLD {
   width: 100%;
-  height: 18%;
+  height: 30%;
   background-color: rgb(124, 124, 124);
   display: flex;
   flex-direction: column;
@@ -148,7 +142,7 @@ h1 {
   align-items: center;
 
 }
-/* #jours {
+#jours {
   width: 100%;
   height: 10%;
   display: flex;
@@ -165,16 +159,6 @@ h1 {
   margin: 0;
   font-size: 18px;
 
-} */
-#jours {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr); /* Répartit les jours en 7 colonnes égales */
-  text-align: center;
-}
-
-.jour {
-  border: 1px solid #ccc; /* Ajoutez une bordure pour séparer visuellement les jours */
-  padding: 5px; /* Ajoutez un peu de marge intérieure pour espacer les jours */
 }
 .semaine {
   width: 100%;
@@ -200,6 +184,41 @@ h1 {
   background-color: rgb(75, 75, 75);
 
 }
+
+.selected {
+  background-color: #FFFF00;
+  color: #000;
+  font-weight: bold;
+}
+.highlighted-range {
+  background-color: #ffeeba;
+  color: #333;
+  font-weight: bold;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ***********************googlemap*************** */
 
 .map-container {
