--- a/Css/style.css
+++ b/Css/style.css
@@ -80,136 +80,13 @@ h1 {
   margin: auto;
 }
 
-/* *******************Calendrier******************** */
-
-.rightBtn {
-  position: relative;
-
+/* Ajoutez cette règle CSS pour changer la couleur de l'icône en noir */
+.carousel-control-next-icon {
+  color: black; /* ou toute autre couleur souhaitée */
 }
 
-.leftBtn {
-  position: relative;
 
-}
 
-#cld {
-
-  height: 70vh;
-  background-color: rgb(124, 124, 124);
-  box-shadow: 0 0 10 rgba(0, 0, 0, 0.3);
-}
-
-#enteteCLD {
-  width: 100%;
-  height: 30%;
-  background-color: rgb(124, 124, 124);
-  display: flex;
-  flex-direction: column;
-}
-
-#cldT {
-  width: 100%;
-  height: 66.66%;
-  color: white;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-}
-
-#avantEtApres {
-  width: 100%;
-  height: 33.33%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(60, 60, 60);
-
-}
-
-.cldBtn {
-  width: 40%;
-  height: 100%;
-  border: none;
-  background-color: rgb(90, 90, 90);
-  color: white;
-  outline: none;
-  transition: 0.2s;
-}
-
-.cldBtn:hover {
-  background-color: rgb(75, 75, 75);
-
-}
-
-#cldBoite {
-  width: 100%;
-  height: 82%;
-  background-color: rgb(143, 143, 143);
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-}
-
-#jours {
-  width: 100%;
-  height: 10%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.jour {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  margin: 0;
-  font-size: 18px;
-
-}
-
-.semaine {
-  width: 100%;
-  height: 15%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.case {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0.1s;
-  color: white;
-  margin: 0;
-  font-size: 19px;
-}
-
-.case:hover {
-  background-color: rgb(75, 75, 75);
-
-}
-
-.selected {
-  background-color: #FFFF00;
-  color: #000;
-  font-weight: bold;
-}
-
-.highlighted-range {
-  background-color: #ffeeba;
-  color: #333;
-  font-weight: bold;
-}
 
 /* ***********************googlemap*************** */
 
@@ -269,6 +146,35 @@ h1 {
   0% {
     -webkit-transform: translateX(-300px);
             transform: translateX(-300px);
+  }
+  100% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+/* **********************************************h2 */
+
+.slide-left {
+  -webkit-animation: slide-left 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-left 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+
+ @-webkit-keyframes slide-left {
+  0% {
+    -webkit-transform: translateX(300px);
+            transform: translateX(300px);
+  }
+  100% {
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+@keyframes slide-left {
+  0% {
+    -webkit-transform: translateX(300px);
+            transform: translateX(300px);
   }
   100% {
     -webkit-transform: translateX(0px);
