--- a/Css/style.css
+++ b/Css/style.css
@@ -94,60 +94,6 @@ h1 {
   transform: scale(1);
 }
 /***********************************************calendrier*************************************************/
-/* .calendar {
-  font-family: Arial, sans-serif;
-  max-width: 400px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  gap: 2px;
-}
-
-.month {
-  grid-column: 1 / span 7;
-  text-align: center;
-  background-color: #BEB09A;
-  color: white;
-  padding: 10px;
-  position: relative;
-}
-
-.prev-month,
-.next-month {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  cursor: pointer;
-  font-size: 20px;
-}
-
-.prev-month {
-  left: 10px;
-}
-
-.next-month {
-  right: 10px;
-}
-
-.day {
-  text-align: center;
-  padding: 5px;
-  border: 1px solid #ddd;
-}
-
-
-/* Style pour les jours de disponibilité spécifiques à un logement */
-/* .available-cosy-patio {
-  border-bottom: 5px solid red;
-}
-
-.available-cosy-zenith {
-  border-bottom: 5px solid green; 
-}
-
-.available-zenit-house {
-  border-bottom: 5px solid yellow; 
-} */
 
 .rightBtn {
   position: relative;
@@ -270,8 +216,10 @@ h1 {
   color: #333;
   font-weight: bold;
 }
-
-
+/* **********************button navbar********************* */
+.navbar-toggler {
+  margin-right: 10px;
+}
 /* ******************************************animation titre************************************** */
 .slide-right {
   -webkit-animation: slide-right 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
